--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,21 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy - Song Timer Extension</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; }
-    h1 { color: #333; }
+    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; max-width: 900px; }
+    h1, h2 { color: #333; }
+    ul { margin-left: 20px; }
   </style>
 </head>
 <body>
-  <h1>Privacy Policy for Song Timer Extension</h1>
-  <p>We respect your privacy. This extension is designed with a privacy-first approach:</p>
+  <h1>Privacy Policy for Song Timer - Mood Based Music Scheduler</h1>
+  <p><strong>Effective Date:</strong> September 20, 2025</p>
+
+  <p>Thank you for using <strong>Song Timer - Mood Based Music Scheduler</strong> (“the Extension”).  
+  Your privacy is important to us, and this Privacy Policy explains how we handle your data when you use the Extension.</p>
+
+  <h2>1. Information We Collect</h2>
   <ul>
-    <li><strong>Data Collection:</strong> The extension does not collect or transmit any personally identifiable information (PII).</li>
-    <li><strong>Local Storage:</strong> Timers and configuration settings are stored locally in your browser using Chrome's storage API.</li>
-    <li><strong>No Third Parties:</strong> Data is not shared with or transmitted to any third-party services.</li>
-    <li><strong>Host Permissions:</strong> Access to YouTube and Spotify is required only to enable playback control when timers are triggered. No other sites are accessed.</li>
-    <li><strong>Data Security:</strong> Since no data is transmitted externally, your information remains secure within your device.</li>
+    <li><strong>Local Data:</strong> The Extension saves user-created timers, schedules, and configuration settings locally in your browser using Chrome’s storage API.</li>
+    <li><strong>No Personal Data:</strong> The Extension does not request, collect, or process any personally identifiable information (PII) unless you voluntarily include such information in a timer name or note.</li>
   </ul>
-  <p>If you have any questions or concerns, you can reach us at: 
-     <a href="mailto:sujith81159@gmail.com">sujith81159@gmail.com</a></p>
+
+  <h2>2. How Information Is Used</h2>
+  <ul>
+    <li>Timer and scheduling data is used solely to provide the Extension’s functionality (e.g., starting music playback at a scheduled time).</li>
+    <li>Host permissions for YouTube and Spotify are used exclusively to allow playback control when timers are triggered.</li>
+  </ul>
+
+  <h2>3. Data Storage and Security</h2>
+  <ul>
+    <li>All data remains stored locally within your browser and is not automatically transmitted to any external server.</li>
+    <li>If you choose to export settings or backups, the data is only saved to your device via Chrome’s download feature.</li>
+    <li>Because no external transmission occurs, your data remains secure on your device.</li>
+  </ul>
+
+  <h2>4. Data Sharing</h2>
+  <ul>
+    <li>The Extension does not share, sell, or transmit your data to third parties.</li>
+    <li>No advertising or analytics tools are integrated into the Extension.</li>
+  </ul>
+
+  <h2>5. Permissions Justification</h2>
+  <ul>
+    <li><strong>Storage:</strong> To save timers and configuration locally.</li>
+    <li><strong>Alarms:</strong> To schedule music playback at specified times.</li>
+    <li><strong>YouTube & Spotify Host Permissions:</strong> Required to enable playback control on these sites only.</li>
+  </ul>
+
+  <h2>6. Children’s Privacy</h2>
+  <p>The Extension is not directed toward children under 13. We do not knowingly collect any information from children.</p>
+
+  <h2>7. Changes to This Policy</h2>
+  <p>We may update this Privacy Policy from time to time. Any changes will be posted here with an updated effective date.  
+  Continued use of the Extension after updates indicates acceptance of the revised policy.</p>
+
+  <h2>8. Contact Us</h2>
+  <p>If you have any questions, concerns, or requests regarding this Privacy Policy or the Extension, please contact us:</p>
+  <p>Email: <a href="mailto:sujith81159@gmail.com">sujith81159@gmail.com</a></p>
 </body>
 </html>
